search page issues, column sizes for image insights, spacing issues on Home page

--- a/app/assets/styles/modules/_testimonials.scss
+++ b/app/assets/styles/modules/_testimonials.scss
@@ -618,8 +618,7 @@ div#block-discussions .title span {
 
 .testimonials {
   position:relative;
-		  top:120px;
-  //margin-top: 120px;
+  margin-top: 200px;
     .sidebar {
     .list-group-item {
       padding: 20px 1.25rem;
